refactor(util): 优化 DownloadUtil
- 新增下载临时文件和清理方法并优化相关使用
- 渲染资源改动